# Omni-vehicle

./: CMakeLists.txt
config/: omni_bot.yaml
launch/: omni_teleoper.launch  vehicle.launch
meshes/: body.mlp
src/: my_teleoper_node.cpp  sensor.cpp  yara_main.cc
urdf/omni_wheel/: main.urdf().xacro  main.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro
